# AdventOfCode

./: .gitignore  LICENSE  README.md
2023/: .gitignore
2023/C/day-25/: day25.c
2023/C/day01/: day01.c
2023/C/day07/: day07.c
2023/C/day17/: day17.c
2023/Haskell/day-02/: day02.cabal
2023/Haskell/day-05/: day05.cabal
2023/Haskell/day-06/: day06.cabal
2023/Haskell/day-17/: day17.cabal
2023/Haskell/day-18/: day18.cabal
2023/Haskell/day-21/: day21.cabal
2023/Haskell/day-22/: day22.cabal
2023/Haskell/day03/: day03.cabal
2023/Haskell/day04/: day04.cabal
2023/Haskell/day04/app/: Main.hs
2023/Haskell/day15/: day15.cabal
2023/Haskell/day20/: day20.cabal
2023/Haskell/day24/: day24.cabal
2023/Haskell/day25/: day25.cabal
AoC-2023/: .gitignore
AoC-2023/Haskell/day-07/: Main.hs  day07.cabal
AoC-2023/Haskell/day-08/: day08.cabal
AoC-2023/Haskell/day-08/app/: Main.hs
AoC-2023/Haskell/day-09/: day09.cabal
AoC-2023/Haskell/day-10/: day10.cabal
AoC-2023/Haskell/day-11/: day11.cabal
AoC-2023/Haskell/day-12/: day12.cabal
AoC-2023/Haskell/day-13/: day13.cabal
AoC-2023/Haskell/day-14/: day14.cabal
AoC-2023/Haskell/day-16/: day16.cabal
AoC-2023/Haskell/day-19/: day19.cabal
AoC-2023/Haskell/day-23/: day23.cabal
AoC-2023/day-01/: Main.hs
AoC-2023/day-02/: day02.cabal
AoC-2023/day-02/app/: Main.hs
AoC-2023/day-03/: day03.cabal
AoC-2023/day-03/app/: Main.hs
AoC-2023/template/: template.hs
