cabal-version:      3.0
name:               day02
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             JoaoAlexNunes
maintainer:         jalnunes.2002@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable day02
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  base ^>=4.17.2.0,
                    containers,
                    parsec,
                    regex-applicative,
                    recursion-schemes,
                    lens,
                    mtl,
                    transformers,
                    QuickCheck,
    hs-source-dirs:   app
    default-language: GHC2021
