cabal-version:      3.4
name:               day02
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             JoaoAlexNunes
maintainer:         jalnunes.2002@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable day02
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.7 && <5,
        regex-applicative >=0.3.4,
        containers >= 0.6.7
    hs-source-dirs:   app
    default-language: GHC2021
