cabal-version:      3.4
name:               day17
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             JoaoAlexNunes
maintainer:         jalnunes.2002@gmail.com
-- copyright:
category:           AoC
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable day17
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.19.0.0,
        regex-applicative,
        containers,
        transformers
    hs-source-dirs:   app
    default-language: GHC2021
